--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -75,7 +75,7 @@ h4 {
 // folks read the text easier
 ::selection {
   color: get-color('light');
-  background-color: get-color('tertiary')
+  background-color: get-color('dark')
   // We set this as an RGBA because that’s how you get a solid color, by using 0.99
   // alpha value. Browsers are wild.
   // background: rgba(get-color('dark-shade'), 0.99);
